<resources>
    <string name="app_name">RVbnb</string>
    <string name="username">User Name</string>
    <string name="password">Password</string>
    <string name="listing_name">Land Name:</string>
    <string name="listing_location">Location:</string>
    <string name="listing_description">Description:</string>
    <string name="listing_availability">Availability:</string>
    <string name="listing_price">Cost Per Day:</string>
    <string name="search">Search</string>
    <string name="image_url">Image Url:</string>
</resources>
