<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.CreateListingActivity">
    
<!--    <ImageView-->
<!--        android:id="@+id/iv_listing"-->
<!--        android:src="@drawable/image_placeholder"-->
<!--        android:layout_width="wrap_content"-->
<!--        android:paddingTop="8dp"-->
<!--        android:layout_height="200dp"-->
<!--        app:layout_constraintTop_toTopOf="parent"-->
<!--        app:layout_constraintLeft_toLeftOf="parent"-->
<!--        app:layout_constraintRight_toRightOf="parent"/>-->

    <TextView
        android:id="@+id/tv_listing_url"
        android:text="@string/image_url"
        style="@style/tv_login_register"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_listing_url"
        style="@style/et_box"
        app:layout_constraintTop_toBottomOf="@id/tv_listing_url"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_listing_address"
        android:text="@string/listing_location"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@+id/et_listing_url"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_listing_address"
        style="@style/et_box"
        app:layout_constraintTop_toBottomOf="@id/tv_listing_address"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_listing_description"
        android:text="@string/listing_description"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@+id/et_listing_address"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_listing_description"
        style="@style/et_box"
        app:layout_constraintTop_toBottomOf="@id/tv_listing_description"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_listing_price"
        style="@style/tv_login_register"
        android:layout_marginTop="8dp"
        android:text="@string/listing_price"
        android:layout_marginLeft="48dp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_listing_description" />

    <EditText
        android:id="@+id/et_listing_price"
        android:inputType="numberDecimal"
        android:layout_width="96dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="4dp"
        android:background="@drawable/edit_text_background"
        android:textSize="20sp"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintTop_toBottomOf="@id/tv_listing_price" />

    <Button
        android:id="@+id/btn_listing_add"
        android:text="Add Listing"
        style="@style/button"
        app:layout_constraintTop_toBottomOf="@id/et_listing_price"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>