<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.LoginActivity">

    <ImageView
        android:id="@+id/iv_icon"
        android:src="@drawable/buildweekrvlogo"
        android:layout_width="200dp"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_app_name"
        android:text="@string/app_name"
        android:textSize="24sp"
        android:textStyle="bold"
        android:textColor="@color/colorPrimaryDark"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/iv_icon"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_username"
        android:text="@string/username"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@id/tv_app_name"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_username"
        style="@style/et_box"
        android:lines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_username"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_password"
        android:text="@string/password"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@id/et_username"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_password"
        style="@style/et_box"
        android:lines="1"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        app:layout_constraintTop_toBottomOf="@id/tv_password"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_login_as"
        android:text="Log In As:"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@id/et_password"
        app:layout_constraintLeft_toLeftOf="parent" />

    <CheckBox
        android:id="@+id/cb_landowner"
        android:text="Landowner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        app:layout_constraintTop_toBottomOf="@id/tv_login_as"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <CheckBox
        android:id="@+id/cb_rvowner"
        android:text="RV Owner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        app:layout_constraintTop_toBottomOf="@id/cb_landowner"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <Button
        android:id="@+id/btn_login"
        android:text="Log In"
        style="@style/button"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toTopOf="@id/btn_register"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_register"
        android:text="Register"
        style="@style/button"
        android:layout_marginBottom="16dp"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>