<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@color/background"
    tools:context=".ui.DetailsActivity">

    <ImageView
        android:id="@+id/iv_listing_details"
        android:src="@drawable/image_placeholder"
        android:layout_width="wrap_content"
        android:layout_height="200dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toRightOf="parent"/>

    <TextView
        android:id="@+id/tv_listing_name_details"
        android:text="@string/listing_name"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@+id/iv_listing_details"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_listing_name_details"
        style="@style/et_box"
        app:layout_constraintTop_toBottomOf="@id/tv_listing_name_details"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_listing_address_details"
        android:text="@string/listing_address"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@+id/et_listing_name_details"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_listing_address_details"
        style="@style/et_box"
        app:layout_constraintTop_toBottomOf="@id/tv_listing_address_details"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_listing_description_details"
        android:text="@string/listing_description"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@+id/et_listing_address_details"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_listing_description_details"
        style="@style/et_box"
        android:lines="4"
        app:layout_constraintTop_toBottomOf="@id/tv_listing_description_details"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_listing_availability_details"
        android:text="@string/listing_availability"
        style="@style/tv_login_register"
        app:layout_constraintTop_toBottomOf="@+id/et_listing_description_details"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <EditText
        android:id="@+id/et_listing_availability_details"
        android:background="@drawable/edit_text_background"
        android:textSize="20sp"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginLeft="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_listing_availability_details"
        app:layout_constraintLeft_toLeftOf="parent"/>

    <TextView
        android:id="@+id/tv_listing_price_details"
        style="@style/tv_login_register"
        android:layout_marginTop="8dp"
        android:layout_marginRight="80dp"
        android:text="@string/listing_price"
        app:layout_constraintRight_toRightOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/et_listing_description_details" />

    <EditText
        android:id="@+id/et_listing_price_details"
        android:background="@drawable/edit_text_background"
        android:textSize="20sp"
        android:layout_width="128dp"
        android:layout_height="wrap_content"
        android:layout_marginRight="48dp"
        android:layout_marginTop="4dp"
        android:layout_marginBottom="4dp"
        app:layout_constraintTop_toBottomOf="@id/tv_listing_availability_details"
        app:layout_constraintRight_toRightOf="parent"/>

    <Button
        android:id="@+id/btn_listing_cancel_details"
        android:text="Cancel"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_corner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/et_listing_price_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toLeftOf="parent"
        app:layout_constraintRight_toLeftOf="@id/btn_listing_update_details"/>

    <Button
        android:id="@+id/btn_listing_update_details"
        android:text="Update"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_corner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/et_listing_price_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_listing_cancel_details"
        app:layout_constraintRight_toLeftOf="@id/btn_listing_delete_details"/>

    <Button
        android:id="@+id/btn_listing_delete_details"
        android:text="Delete"
        android:textSize="16sp"
        android:textColor="#FFFFFF"
        android:background="@drawable/rounded_corner_button"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:padding="4dp"
        app:layout_constraintTop_toBottomOf="@id/et_listing_price_details"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintLeft_toRightOf="@id/btn_listing_update_details"
        app:layout_constraintRight_toRightOf="parent"/>

</androidx.constraintlayout.widget.ConstraintLayout>